--- a/app/views/_styles.html.erb
+++ b/app/views/_styles.html.erb
@@ -1,4 +1,5 @@
 <style>
+/* TODO - Remove all general styles except for the font import */
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;600&display=swap');
 
 body {
@@ -17,43 +18,6 @@ h2 {
 
 h4 {
 	margin-top: 16px;
-}
-
-textarea {
-	width: 605px;
-	height: 110px;
-
-	border: 2px solid black;
-	border-radius: 8px;
-
-	padding: 8px;
-
-	font-family: 'Inter Tight', sans-serif;
-}
-
-button {
-	display: block;
-	width: 100%;
-
-	background-color: black;
-	border: none;
-	border-radius: 8px;
-
-	font-family: 'Inter Tight', sans-serif;
-	color: white;
-
-	font-size: 1rem;
-	padding: 8px 16px 8px 16px;
-
-	cursor: pointer;
-}
-
-.card {
-	width: max-content;
-	border: 2px solid #ebebeb;
-	padding: 32px;
-	border-radius: 8px;
-	margin: 0 auto;
 }
 
 .chart {
