--- a/app/views/_styles.html.erb
+++ b/app/views/_styles.html.erb
@@ -42,6 +42,10 @@ h4.purechart {
 	z-index: 1;
 }
 
+.bar-chart-bar {
+	height: 16px;
+}
+
 .lollipop-end {
 	width: 16px;
 	height: 16px;
@@ -68,6 +72,10 @@ h4.purechart {
 	text-overflow: ellipsis;
 	overflow: hidden;
 	padding-right: 8px;
+}
+
+.bar-chart-bar-title {
+	top: -6px;
 }
 
 .tooltip {
