--- a/app/views/_styles.html.erb
+++ b/app/views/_styles.html.erb
@@ -42,6 +42,14 @@ h4.purechart {
 	z-index: 1;
 }
 
+.pie {
+	color: transparent
+}
+
+.pie-slice:hover {
+	stroke-opacity: 0.5	
+}
+
 .bar-chart-bar {
 	height: 16px;
 }
