--- a/app/views/_styles.html.erb
+++ b/app/views/_styles.html.erb
@@ -4,6 +4,7 @@
 h4.purechart {
 	margin: 0;
 	margin-top: 16px;
+	margin-bottom: 16px;
 	font-family: 'Inter Tight', sans-serif;
 }
 
@@ -15,7 +16,7 @@ h4.purechart {
 	padding-top: 32px;
 	padding-bottom: 32px;
 
-	position: relative;
+	position: absolute;
 
 	border-bottom: 2px solid black;
 }
@@ -34,16 +35,54 @@ h4.purechart {
 
 .line-point{
 	position: absolute;
-	width: 8px; /* Set the width of the point */
-	height: 8px; /* Set the height of the point */
-	
-	border-radius: 50%; /* Make the point a circle */
-	background-color: #000; /* (black) */
-	color: #fff; /* Set the default text color (white) */
+	height: 0px; /* Set width and heigh to 0 to replace with SVG */
+	width: 0px; /* To make the square invisible*/
 
-	text-align: center;
-	line-height: 1px;
+	left: -8px;
+	
+	background-color: #000; /* (black) */
 }
+
+.tooltip-trigger {
+	position: absolute;
+	bottom: -40px;
+	height: 64px;
+	width: 64px;
+	background-color: transparent;
+
+	margin-bottom: 32px;
+
+    cursor: pointer; 
+    z-index: 1; /* Set z-index to ensure it receives hover */
+}
+
+.cross-tooltip{
+	position: absolute;
+
+	padding: 8px;
+
+	background-color: #fff;
+	border-radius: 8px;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 10px 36px 0px, rgba(0, 0, 0, 0.15) 0px 0px 0px 1px;
+
+	opacity: 0;
+	transform: translateX(-50%) translateY(-50%);
+
+	transition: 0.25s all ease;
+}
+
+.tooltip-trigger:hover .cross-tooltip {
+	opacity: 1;
+	transform: translateX(-50%) translateY(calc(-50% - 32px));
+}
+
+.cross-tooltip p {
+	margin: 0px;
+	font-family: 'Inter Tight';
+	font-weight: 700;
+	color: black;
+}
+
 /* === */
 
 .chart {
@@ -175,24 +214,19 @@ h4.purechart {
 	position: relative;
 }
 
-/* Line Plot axis styles */
 .gridlines-ticks div p {
 	margin: 0;
 	font-family: 'Inter Tight';
 }
 
-.line-chart-ticks {
-
-}
-
-/* ===== */
-
 .bar:hover .tooltip {
 	opacity: 1;
 	transform: translateX(-50%) translateY(calc(-50% - 32px));
 }
-
-.
+.tooltip-trigger:hover .tooltip {
+	opacity: 1;
+	transform: translateX(-50%) translateY(calc(-50% - 32px));
+}
 
 * {
 	box-sizing: border-box;
