--- a/app/views/_styles.html.erb
+++ b/app/views/_styles.html.erb
@@ -47,7 +47,11 @@ h4.purechart {
 }
 
 .pie-slice:hover {
-	stroke-opacity: 0.5	
+	stroke-opacity: 0.7
+}
+
+.pie-slice:hover:nth-child(1n + 0) + .pie-slice-hover:nth-child(1n+0) {
+	stroke-opacity: 0.3
 }
 
 .bar-chart-bar {
