Added hover animations

--- a/app/views/_styles.html.erb
+++ b/app/views/_styles.html.erb
@@ -47,11 +47,13 @@ h4.purechart {
 }
 
 .pie-slice:hover {
-	stroke-opacity: 0.7
+	stroke-opacity: 0.8;
+	transition: 0.25s all ease;
 }
 
 .pie-slice:hover:nth-child(1n + 0) + .pie-slice-hover:nth-child(1n+0) {
-	stroke-opacity: 0.3
+	stroke-opacity: 0.25;
+	transition: 0.05s all ease;
 }
 
 .bar-chart-bar {
