--- a/app/views/_styles.html.erb
+++ b/app/views/_styles.html.erb
@@ -47,12 +47,12 @@ h4.purechart {
 }
 
 .pie-slice:hover {
-	stroke-opacity: 0.8;
+	fill-opacity: 0.8;
 	transition: 0.25s all ease;
 }
 
-.pie-slice:hover:nth-child(1n + 0) + .pie-slice-hover:nth-child(1n+0) {
-	stroke-opacity: 0.25;
+.pie-slice:hover:nth-child(1n + 0) + .pie-slice-arc:nth-child(1n+0) {
+	stroke-opacity: 0.3;
 	transition: 0.05s all ease;
 }
 
