--- a/app/views/_styles.html.erb
+++ b/app/views/_styles.html.erb
@@ -51,7 +51,8 @@ h4.purechart {
 	transition: 0.25s all ease;
 }
 
-.pie-slice:hover:nth-child(1n + 0) + .pie-slice-arc:nth-child(1n+0) {
+.pie-slice:hover:nth-child(1n + 0) + .pie-slice-arc:nth-child(1n+0){
+	fill-opacity: 0.8;
 	stroke-opacity: 0.3;
 	transition: 0.05s all ease;
 }
