--- a/app/views/_pie.html.erb
+++ b/app/views/_pie.html.erb
@@ -11,9 +11,10 @@
                     <%=object[:percent_value] > 0.5 ? 1 : 0%> 1
                     <%= 150 - 125 * Math.cos(2 * Math::PI * cumulative_percent)%> 
                     <%= 150 - 125 * Math.sin(2 * Math::PI * cumulative_percent)%> Z" 
-                stroke="White" 
-                fill="<%=object[:color]%>"
-                stroke-width="1" />
+                stroke="<%= object[:is_negative] == 1 ? object[:color] : 'white' %>"
+                stroke-dasharray= '<%= object[:is_negative] == 1 ? 30 : 0 %>'
+                fill="<%= object[:is_negative] == 1 ? 'white' : object[:color] %>"
+                stroke-width="<%= object[:is_negative] == 1 ? 5 : 1 %>" />
                 <%-arc_x = 150 - 125 * Math.cos(2 * Math::PI * cumulative_percent)%>
                 <%-arc_y = 150 - 125 * Math.sin(2 * Math::PI * cumulative_percent)%>
 
@@ -28,6 +29,7 @@
         </svg>
     </div>
     <%# Insert the key here %>
+
 </div>
 
 <%= render :partial => '/styles' %>
