--- a/app/views/_styles.html.erb
+++ b/app/views/_styles.html.erb
@@ -115,6 +115,8 @@ h4.purechart {
 
 	margin-bottom: 32px;
 	position: relative;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
 
 	cursor: pointer;
 	z-index: 1;
